Midi/250929_nouvelleapproche/fader_pid_motor/error complil 
ATTENTION: la bibliothèque Control Surface prétend être exécutable sur la (ou les) architecture(s) avr, sam, samd, teensy, esp32, esp8266, megaavr, mbed, mbed_nano, mbed_rp2040, renesas_uno et peut être incompatible avec votre carte actuelle qui s'exécute sur rp2040.
/Users/loiclemahieu/Documents/GitHub/Roulante_R-seau-controler_ipad_BO-/Midi/250929_nouvelleapproche/fader_pid_motor/fader_pid_motor.ino: In function 'void setup()':
/Users/loiclemahieu/Documents/GitHub/Roulante_R-seau-controler_ipad_BO-/Midi/250929_nouvelleapproche/fader_pid_motor/fader_pid_motor.ino:49:9: error: 'bashTestBegin' was not declared in this scope
   49 |         bashTestBegin();
      |         ^~~~~~~~~~~~~
/Users/loiclemahieu/Documents/GitHub/Roulante_R-seau-controler_ipad_BO-/Midi/250929_nouvelleapproche/fader_pid_motor/fader_pid_motor.ino: In function 'void loop()':
/Users/loiclemahieu/Documents/GitHub/Roulante_R-seau-controler_ipad_BO-/Midi/250929_nouvelleapproche/fader_pid_motor/fader_pid_motor.ino:74:9: error: 'bash_test_pid' was not declared in this scope; did you mean 'bash_test_mode'?
   74 |     if (bash_test_pid == 0) return; // pas de com Python
      |         ^~~~~~~~~~~~~
      |         bash_test_mode
exit status 1

Compilation error: 'bashTestBegin' was not declared in this scope